# testingLoad

./: CMakeLists.txt  libFloat.dylib  main.cpp
include/: Expression.hpp  Operand.hpp
libs/: CMakeLists.txt  DontKnow.hpp  Float.cpp  Float.hpp  FloatOperations.cpp  FloatOperations.hpp  OperationInfo.cpp  OperationInfo.hpp  StringToFloat.cpp  StringToFloat.hpp  Validators.cpp  Validators.hpp
src/DLLoader/: CMakeLists.txt  DLLoader.cpp  DLLoader.hpp
